2008-05-22  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.11

2008-05-22  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/apt-worker.cc (myDPkgPM::CheckDownloadedPkgs): This function
	now tries to use first the SHA256 checksum if it is available; if
	it isn't, it tries to use SHA-1, and if that isn't available
	either it tries with MD5.  I added additional checks for the case
	when the file path is empty or the file doesn't exist (N85300).

2008-05-22  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/apt-worker.cc (CheckDownloadedPkgs): Use CandidateVer
	instead of GetCandidateVer to avoid recomputing the candidate
	version.

2008-05-22  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/apt-worker.cc (myDPkgPM::CheckDownloadedPkgs): this function
	checks the package files that are about to be installed using
	their MD5 sum. If one of the files is corrupted, it adds a line to
	the log and returns false.
	(class myDPkgPM): added the function
	myDPkgPM::CheckDownloadedPkgs()
	(operation): Uses myDPkgPM::CheckDownloadedPkgs() before
	performing the isntallation of the downloaded packages. If one of
	the files to be installed is corrupted, the error code
	"rescode_package_corrupted" is returned.  Partially fixes N85300.

2008-05-22  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/main.cc (restore_packages_flow): Check if there's a
	packages.backup file under /var/lib/hildon-application-manager
	before trying to restore a backup (N83585).

	* hildon-application-manager.sh: Check if file pointed by $pkgs
	exists before trying to copy it to /home/user (N83585).

2008-05-22  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/apt-worker.cc: Move extra_info array and related functions
	from AptWorkerState to myCacheFile so that it is available more
	cleanly for myPolicy.  Updated all users.

2008-05-21  Marius Vollmer  <marius.vollmer@nokia.com>

	Ignore packages from the wrong domain. (N85305)
