@@ -1,3 +1,9 @@
+2008-05-26  Felipe Erias Morandeira  <femorandeira@maemo.org>
+
+	* src/apt-worker.cc (myDPkgPM::CheckDownloadedPkgs): This function checks
+	all of the downloaded packages and optionally deletes the corrupted ones, so
+	they don't stick in the cache and can be downloaded again.
+
 2008-05-22  Marius Vollmer  <marius.vollmer@nokia.com>
 
 	Released 2.1.11
